[metadata]
name = deepsea
author = Abolfazl Zargari and Ali Shariati
author_email = alish@ucsc.edu
description = An efficient deep learning model for single-cell segmentation and tracking of time-lapse microscopy images
keywords =
    live-cell imaging
    cell segmentation
    cell tracking
    image analysis
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/SchmollerLab/Cell_ACDC
project_urls =
    Shariati lab = https://shariatilab.sites.ucsc.edu/
classifiers =
    Development Status :: 3 - Alpha
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: BSD License
    Intended Audience :: Education
    Intended Audience :: Science/Research
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Operating System :: Unix
    Operating System :: MacOS
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Bio-Informatics
    Topic :: Scientific/Engineering :: Information Analysis
    Topic :: Scientific/Engineering :: Image Processing
    Topic :: Scientific/Engineering :: Visualization
    Topic :: Utilities

[options]
packages = find:
python_requires =
    >=3.8
include_package_data = True
install_requires =
    opencv-python-headless>=4.5.1.48
    numpy>=1.19.5
    torch>=1.7.1
    Pillow>=8.1.0
    tqdm>=4.56.0
    scipy>=1.3.3
    scikit-image>=0.17.2
    munkres>=1.1.4
    torchvision>=0.8.2
    setuptools-scm